    - rendering helper class for setting up things like 3d rendering, alpha usage, ...
    - add an line into logging where the system searches for the location where the error occur and will link the mod
        caused it into the log
    - parser for the new mc dimension config format


changelog of snapshot [next]
    changelog of dev-cycle 1
        - changed version tuple builder for mcpython

        fixed issues:
            from previous snapshot:
                - dicts in config file failed to load


changelog of snapshot 20w22a released on 30.05.2020 (theme: feature cleanup & improvements)
    - optimized block rendering
    - re-ordered some UV-related stuff, you may want to update your own models
    - improved dependency system for mods
    - added config system for mods & internals [incompatible with mc config files]
    - improved existing factories & added some more factories & entries
    - improved exception handling
    - added StateConfigFile.py handling State-confog-files
    - deprecated a lot of stuff

    fixed issues:
        from versions before this snapshot:
            - block updates were not called in every case
            - walls and fences were not updating their state correctly
            - during printing an exception, an new exception could occur
            - event "worldgen:chunk:finished" was not called in most cases
            - data packs may not get unloaded when they needed to

changelog of release alpha 1.0.1
    fixed bugs:
        from previous release:
            - fixed crash on startup
            - when loading an world from an never save version, the game gives out an exception


changelog of release alpha 1.0.0: (theme: bug fixing & system improvements)
    during developing more features, the developer has decided to discard the progress. As some more difficulties had
    occur [Covid-19], the development time for these dev-cycle was far longer than expected.

    Event-system: