@@ -67,4 +67,18 @@ rendering -> {
     }
     }
 }
+profiler -> {
+    D{
+    
+    enable -> {
+        Bfalse
+    }
+    total_draw -> {
+        Btrue
+    }
+    total_tick -> {
+        Bfalse
+    }
+    }
+}
 }
